--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "swiper": "^8.2.2",
+    "vue": "^2.6.14",
+    "vue-agile": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
